# smbc_scraper

./: .gitignore  .readthedocs.yaml  Makefile  README.md  SOURCE.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-blind-site.yml
blind_smbc/: generator.py
blind_smbc/static/: style.css
blind_smbc/templates/: about.html  archive.html  base.html  comic.html  search.html
docs/: PRIOR_ART.md  contributing.md  data-layout.md  index.md  installation.md  similar-websites.md  source-material.md  usage.md
gold_data/: local_md.csv  local_md.xlsx  smbc_ground_truth.csv  smbc_ground_truth.xlsx  smbc_ocr.xlsx  smbc_wiki.csv  smbc_wiki.xlsx
scripts/: go.sh  make_prompt.sh  make_source.sh
smbc_scraper/: __main__.py  cli.py  export.py  models.py
smbc_scraper/core/: files.py  http.py  logging.py
smbc_scraper/sources/: ohnorobot.py  openrouter_vision.py  smbc.py  smbc_wiki.py  that_github_repo.py
spec/: GEMINI_SAYS.md  SONNET_SAYS.md  blind_web.md
test/: test_export.py  test_models.py
test/test_core/: test_files.py  test_http.py
test/test_sources/: test_ohnorobot.py  test_openrouter_vision.py  test_smbc.py  test_smbc_wiki.py
