# pyproject.toml

[project]
name = "smbc-scraper"
version = "0.1.0"
description = "Multi-source scraper for Saturday Morning Breakfast Cereal comics."
requires-python = ">=3.12"
authors = [{ name = "Matthew Dean Martin" }]
dependencies = [
    "pydantic",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "rich>=13.7.1",
    "tenacity>=8.4.1",
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "pyarrow>=16.1.0",      # For optional Parquet export
    "hishel>=0.0.34",       # Async-compatible HTTP caching
    "loguru>=0.7.2",        # A nice logging library
]

[dependency-groups]
dev = [
    "pytest-asyncio",
    "types-requests",
    "git2md; python_version >= '3.10'",
    "pyclean; python_version >= '3.12'",
    "strip-docs>=1.0; python_version >= '3.12'",
    "gha-update; python_version >= '3.12'",
    "mkdocstrings[python]",
    "mkdocs; python_version >= '3.12'",
    "mdformat",
    # plugin finder
    "packaging; python_version >= '3.8'",
    # mpy
    "mypy; python_version >= '3.8'",
    "types-toml; python_version >= '3.8'",
    # reports

    # build
    "vermin; python_version >= '3.8'",
    "metametameta>=0.1.3; python_version >= '3.9'",
    "hatchling; python_version >= '3.8'",
    "ruff>=0.12.0; python_version >= '3.8'",
    "pylint; python_version >= '3.8'",
    "bandit; python_version >= '3.8'",
    "pre-commit; python_version >= '3.8'",
    # testing tools
    "pytest; python_version >= '3.8'",
    "pytest-cov; python_version >= '3.8'",
    "pytest-xdist>=3.5.0; python_version >= '3.8'",
    "pytest-randomly>=3.15.0; python_version >= '3.8'",
    "pytest-sugar>=0.9.7; python_version >= '3.8'",
    "pytest-mock; python_version >= '3.8'",
    "pytest-unused-fixtures; python_version >= '3.10'",
    "hypothesis[cli]; python_version >= '3.8'",
    "detect-test-pollution",
    "pytest-timeout>=2.4.0",
    # docs
    "interrogate>=1.5.0; python_version >= '3.8'",
    "pydoctest==0.2.1; python_version >= '3.8'",
    "pdoc3>=0.5.0; python_version >= '3.8'",
    "mdformat>=0.5.0; python_version >= '3.8'",
    "linkcheckmd>=1.4.0; python_version >= '3.8'",
    "codespell>=2.2.6; python_version >= '3.8'",
    "pyenchant>=3.2.2; python_version >= '3.8'",
]


[project.scripts]
smbc-scrape = "smbc_scraper.cli:main"

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
